盤面を作成

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 	<link rel="stylesheet" href="app.css">
 	<script type="text/javascript" src="app.js"></script>
 </head>
-<body>
+<body onload="start()">
+	<div id="board"></div>
+	<div id="turn"></div>
+	<form name="form1">
+		<input type="radio" id="buttonX1Y1" value="x1y1" name="radiobutton">
+		<input type="radio" id="buttonX2Y2" value="x2y1" name="radiobutton">		
+		</br>
+		<input type="radio" id="buttonX2Y1" value="x1y2" name="radiobutton">
+		<input type="radio" id="buttonX2Y2" value="x2y2" name="radiobutton">
+		<input type="button" id="submit" value="submit" onclick="attack()">
+		</br>
+	</form>
 </body>
 </html>
