--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 	<div id="board"></div>
 	<div id="turn"></div>
+	<div id="buttonInfo"></div>
+	<div id ="buttonLength"></div>
 	<form name="form1">
 		<input type="button" id="submit" value="Attack!">
 	</form>
