--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<div id="board"></div>
 	<div id="turn"></div>
 	<div id="placeToAttack"></div>
+	<div id="buttons"></div>
 	<form name="form1">
 		<input type="button" id="submit" value="Attack!">
 	</form>
