ゲームの終了判定を追加

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 	<div id="turn"></div>
 	<div id="placeToAttack"></div>
 	<div id="buttons"></div>
-	<form name="form1">
-		<input type="button" id="submit" value="Attack!">
-	</form>
+	<input type="button" id="passButton" value="Pass!"></div>
 </body>
 </html>
